🚨 fix linter warning & error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,6 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/jsx-props-no-spreading": false
+    "react/jsx-props-no-spreading": 0
   }
 }
