--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "firebase": "^8.6.8",
     "next": "11.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
