--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.25",
     "@tiptap/react": "^2.0.0-beta.52",
     "@tiptap/starter-kit": "^2.0.0-beta.81",
     "firebase": "^8.6.8",
