🔧 accept no-underscore-dangle

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-props-no-spreading": 0,
-    "jsx-a11y/anchor-is-valid": 0
+    "jsx-a11y/anchor-is-valid": 0,
+    "no-underscore-dangle": 0
   }
 }
