--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/react": "^2.0.0-beta.52",
     "@tiptap/starter-kit": "^2.0.0-beta.81",
     "firebase": "^8.6.8",
+    "firebase-admin": "^9.10.0",
     "next": "11.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
