🔧 accept react/no-danger

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
   "rules": {
     "react/jsx-props-no-spreading": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "react/no-danger": 0
   }
 }
