--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "react/jsx-props-no-spreading": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "no-underscore-dangle": 0,
-    "react/no-danger": 0
+    "react/no-danger": 0,
+    "react/no-array-index-key": 0
   }
 }
