--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
     "jsx-a11y/anchor-is-valid": 0,
     "no-underscore-dangle": 0,
     "react/no-danger": 0,
-    "react/no-array-index-key": 0
+    "react/no-array-index-key": 0,
+    "react-hooks/exhaustive-deps": 0,
+    "no-console": 0
   }
 }
